<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Detail">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/image_anime"
            android:layout_width="230dp"
            android:layout_height="250dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/nama"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="4dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ciri"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:id="@+id/tv_ciri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/ciri"
                android:layout_marginStart="10dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/umur"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:id="@+id/tv_umur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/umur"
                android:layout_marginStart="10dp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite"
            android:layout_margin="10dp"
            android:drawableEnd="@drawable/ic_baseline_favorite_24"
            android:drawablePadding="8dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:layout_margin="10dp"
            android:drawableEnd="@drawable/ic_baseline_share_24"
            android:drawablePadding="8dp"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="10dp"/>
        <TextView
            android:id="@+id/tv_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/nama"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="4dp"
            android:layout_gravity="end"/>
    </LinearLayout>

</LinearLayout>

